--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    <form name="contact" netlify>
+<form name="fileForm" enctype="multipart/form-data" data-netlify="true">
   <p>
-    <label>Name <input type="text" name="name" /></label>
+    <label>
+      <span>Name:</span>
+      <input name="name" type="text"/>
+    </label>
   </p>
   <p>
-    <label>Email <input type="email" name="email" /></label>
+    <label>
+      <span>Add file:</span>
+      <input name="file" type="file"/>
+    </label>
   </p>
-  <p>
-    <button type="submit">Send</button>
-  </p>
+  <button>Submit</button>
 </form>
+<p class="result"></p>
+
 </body>
 </html>
