--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-<form name="fileForm" enctype="multipart/form-data" data-netlify="true">
+<form name="fileForm" enctype="multipart/form-data" data-netlify="true" data-netlify-recaptcha="true">
   <p>
     <label>
       <span>Name:</span>
