--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.scss">
     <title>Document</title>
 </head>
 <body>
@@ -168,5 +168,6 @@
 	</div>
 	<div class="swiper-pagination"></div>
 </div>
+	<script src"func.babel"></script>
 </body>
 </html>
