--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <a target="_blank" href="https://github.com/klevron/threejs-toys">github/threejs-toys</a>
   </div>
 </div>
+    <script src="func.js"></script>
 </body>
 </html>
