--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Lim sl o</title>
+        <meta name="keywords" content="Lim, Gavin">
+    <meta name="description" content="Welcome to nothing by lim yeah by me litterally">
+    <meta name="author" content="Lim">
 </head>
 <body>
 <div id="app">
