--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <div id="app">
   <div id="hero">
-    <h1>NEON<br/>CURSOR</h1>
+    <h1>Nothing here✨</h1>
     <a target="_blank" href="https://github.com/klevron/threejs-toys">github/threejs-toys</a>
   </div>
 </div>
