--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="style.css">
     <title>Lim sl o</title>
         <meta name="keywords" content="Lim, Gavin">
     <meta name="description" content="Welcome to nothing by lim yeah by me litterally">
@@ -14,9 +14,24 @@
 <div id="app">
   <div id="hero">
     <h1>Nothing here✨</h1>
-    <a target="_blank" href="https://github.com/klevron/threejs-toys">github/threejs-toys</a>
   </div>
 </div>
-    <script src="func.js"></script>
+    <script>
+        import { neonCursor } from 'https://unpkg.com/threejs-toys@0.0.8/build/threejs-toys.module.cdn.min.js'
+
+neonCursor({
+  el: document.getElementById('app'),
+  shaderPoints: 16,
+  curvePoints: 80,
+  curveLerp: 0.5,
+  radius1: 5,
+  radius2: 30,
+  velocityTreshold: 10,
+  sleepRadiusX: 100,
+  sleepRadiusY: 100,
+  sleepTimeCoefX: 0.0025,
+  sleepTimeCoefY: 0.0025
+})
+    </script>
 </body>
 </html>
